# TODO

./: CMakeLists.txt  main.cpp
src/controller/: ControllerToDo.cpp  ControllerToDo.h
src/model/: ToDoItem.cpp  ToDoItem.h  ToDoModel.cpp  ToDoModel.h
src/ui/: dialogaddingwindow.cpp  dialogaddingwindow.h  dialogaddingwindow.ui  infodialogwindow.cpp  infodialogwindow.h  infodialogwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
